--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -119,6 +119,7 @@
             <img src="/assets/logo-white.svg" alt="Omniscient Design" class="logo" />
           <%end%>
           <p class="tagline"><%=t('footer.tagline')%></p>
+              <%= link_to t('footer.donation'), "https://fr.tipeee.com/le-site-omniscient-design/", target: "_blank", class: "underline medium"%>
           <div class="socials">
             <a href="https://www.instagram.com/omniscientdesign_/" target="_blank">
                 <svg width="43" height="44" viewBox="0 0 43 44" fill="none" xmlns="http://www.w3.org/2000/svg">
