--- a/app/views/oeuvres/_oeuvre.html.erb
+++ b/app/views/oeuvres/_oeuvre.html.erb
@@ -158,12 +158,14 @@
           <%= oeuvre.date_oeuvre %>
         </p>
       <%end%>
-      <%= link_to search_path(:tab => "references", :domaine => oeuvre.domaine.id) do %>
-      <div class="info-card-dark info-header-show" data-no-popup>
-        <div class="small-circle" style="background-color: <%= oeuvre.domaine.couleur %>;"></div>
-        <%= oeuvre.domaine.domaine %>
-      </div>
-      <%end%>
+      <% @domaines.each do |domaine| %>
+        <%= link_to search_path(:tab => "references", :domaine => domaine.id) do %>
+          <div class="info-card-dark info-header-show" data-no-popup>
+            <div class="small-circle" style="background-color: <%= domaine.couleur %>;"></div>
+            <span><%= domaine.domaine %></span>
+          </div>
+        <% end %>
+      <% end %>
     </div>
     <div class="header-top">
       <div>
@@ -185,22 +187,15 @@
             <%= oeuvre.date_oeuvre %>
           </div>
         <%end%>
-        <% if @oeuvre.domaine.present? %>
-          <%= link_to search_path(:tab => "references", :domaine => oeuvre.domaine.id) do %>
-            <div class="info-card" data-no-popup>
-              <div class="small-circle" style="background-color: <%= oeuvre.domaine.couleur %>;"></div>
-              <%= @oeuvre.domaine.domaine %>
-            </div>
-          <%end%>
-        <% else %>
-          <p class="info-card" data-no-popup>
-            <svg width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M17.8288 6.31757L11.5363 0.80117C10.9595 0.285235 10.2127 0 9.43881 0C8.6649 0 7.91815 0.285235 7.34132 0.80117L1.04884 6.31757C0.71573 6.61549 0.449906 6.98096 0.269073 7.38964C0.0882399 7.79833 -0.00345306 8.24084 9.94149e-05 8.68773V17.8538C9.94149e-05 18.6882 0.331577 19.4885 0.921611 20.0785C1.51164 20.6685 2.3119 21 3.14633 21H15.7313C16.5657 21 17.366 20.6685 17.956 20.0785C18.546 19.4885 18.8775 18.6882 18.8775 17.8538V8.67725C18.8796 8.23212 18.7872 7.79162 18.6064 7.38486C18.4256 6.97809 18.1606 6.61432 17.8288 6.31757ZM11.5363 18.9025H7.34132V13.6588C7.34132 13.3806 7.45181 13.1139 7.64849 12.9172C7.84516 12.7205 8.11192 12.61 8.39006 12.61H10.4876C10.7657 12.61 11.0324 12.7205 11.2291 12.9172C11.4258 13.1139 11.5363 13.3806 11.5363 13.6588V18.9025ZM16.78 17.8538C16.78 18.1319 16.6695 18.3987 16.4729 18.5953C16.2762 18.792 16.0094 18.9025 15.7313 18.9025H13.6338V13.6588C13.6338 12.8244 13.3023 12.0241 12.7123 11.4341C12.1222 10.844 11.322 10.5125 10.4876 10.5125H8.39006C7.55563 10.5125 6.75537 10.844 6.16534 11.4341C5.5753 12.0241 5.24383 12.8244 5.24383 13.6588V18.9025H3.14633C2.86819 18.9025 2.60144 18.792 2.40476 18.5953C2.20808 18.3987 2.09759 18.1319 2.09759 17.8538V8.67725C2.09778 8.52834 2.12967 8.38118 2.19116 8.24556C2.25264 8.10994 2.3423 7.98897 2.45416 7.89069L8.74663 2.38478C8.93802 2.21664 9.18406 2.12392 9.43881 2.12392C9.69355 2.12392 9.93959 2.21664 10.131 2.38478L16.4234 7.89069C16.5353 7.98897 16.625 8.10994 16.6865 8.24556C16.7479 8.38118 16.7798 8.52834 16.78 8.67725V17.8538Z" fill="white"/>
-            </svg>
-            <%= t('oeuvres.domaine_non_specifie') %>
-          </p>
-        <% end %>
-      
+          <% @domaines.each do |domaine| %>
+            <%= link_to search_path(:tab => "references", :domaine => domaine.id) do %>
+              <div class="info-card" data-no-popup>
+                <div class="small-circle" style="background-color: <%= domaine.couleur %>;"></div>
+                <%= domaine.domaine %>
+              </div>
+            <% end %>
+          <% end %>
+     
       </div>
     </div>
   </div>
@@ -334,37 +329,37 @@
     </div>
   </div>
 
-  <% if oeuvre.validation %>
-    <div class="next-card" data-controller="horizontal-scroll">
-      <h2 class="title-description-reference"><%= t('oeuvres.decouvrir_autres') %></h2>
+  <% if @oeuvre.validation %>
+  <div class="next-card" data-controller="horizontal-scroll">
+    <h2 class="title-description-reference"><%= t('oeuvres.decouvrir_autres') %></h2>
 
-      <div class="horizontal-scroll-section" data-horizontal-scroll-target="section">
-        <div class="horizontal-wrapper" data-horizontal-scroll-target="wrapper">
-          <% domaine_oeuvres =  @oeuvre.domaine.oeuvres.where(validation: true)
-                              .where.not(id: @oeuvre.id)
-                              .order("RANDOM()")
-                              .limit(5) %>
-          <% domaine_oeuvres.each do |oeuvre| %>
-            <%= link_to oeuvre do %>
-              <% image_path = "oeuvres/desktop/#{remove_accents_and_special_chars(oeuvre.nom_oeuvre)}.webp" %>
-              <div class="oeuvre-card">
-                <% if asset_exists?(image_path) %>
-                  <div class="oeuvre-card-image" style="background-image: url('<%= asset_path(image_path) %>');">
-                <% else %>
-                  <div class="oeuvre-card-image" style="background-image: url('<%= asset_path(oeuvre.image) %>');">
-                <% end %>
-                    <div class="oeuvre-card-content">
-                      <span class="oeuvre-designer"><%= oeuvre.designers.map(&:nom_designer).join(', ') %></span>
-                      <p class="oeuvre-title"><%= oeuvre.nom_oeuvre %></p>
-                    </div>
+    <div class="horizontal-scroll-section" data-horizontal-scroll-target="section">
+      <div class="horizontal-wrapper" data-horizontal-scroll-target="wrapper">
+
+        <% @domaine_oeuvres.each do |oeuvre| %>
+          <%= link_to oeuvre do %>
+            <% image_path = "oeuvres/desktop/#{remove_accents_and_special_chars(oeuvre.nom_oeuvre)}.webp" %>
+
+            <div class="oeuvre-card">
+              <% if asset_exists?(image_path) %>
+                <div class="oeuvre-card-image" style="background-image: url('<%= asset_path(image_path) %>');">
+              <% else %>
+                <div class="oeuvre-card-image" style="background-image: url('<%= asset_path(oeuvre.image) %>');">
+              <% end %>
+
+                  <div class="oeuvre-card-content">
+                    <span class="oeuvre-designer"><%= oeuvre.designers.map(&:nom_designer).join(', ') %></span>
+                    <p class="oeuvre-title"><%= oeuvre.nom_oeuvre %></p>
                   </div>
                 </div>
-              <% end %>
-            <% end %>
-        </div>
+              </div>
+          <% end %>
+        <% end %>
+
       </div>
     </div>
-  <% end %>
+  </div>
+<% end %>
 
   <div data-controller="validation-overlay">
     <% if !oeuvre.validation %>
