pub / opti chargement frise

--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -410,3 +410,7 @@ document.addEventListener("turbo:load", () => {
     }
   }
 </script>
+<script>
+  window.loaderVideoPath = "<%= asset_path('loader.webm') %>"
+  window.loaderUnsupportedText = "<%= j t('loader.unsupported_browser') %>"
+</script>
