--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -1,9 +1,61 @@
-
-<%= form_with(model: @list, local: true, data: { turbo: false }) do |form| %>
-
+<%= form_with(model: @list, local: true, data: { turbo: true }, id: "filterForm") do |form| %>
   <%= form.text_field :name, placeholder: t('lists.create.name_placeholder'), id: "list-name" %>
+   <h2><%= t('lists.create.filters') %></h2>
+  <div class="filters">
+    <!-- Domaine -->
+    <div class="filter">
+      <label for="list_domaine"><%= t('search.domain') %></label>
+      <%= form.select :domaine, Domaine.all.map { |d| [d.domaine, d.id] }, { include_blank: t('search.choose_domain') }, { multiple: true, class: "select2", id: "list_domaine" } %>
+    </div>
+
+    <!-- Notions -->
+    <div class="filter">
+      <label for="list_notions"><%= t('search.notions') %></label>
+      <%= form.select :notions, Notion.all.map { |n| [n.name, n.id] }, { include_blank: t('search.choose_notions') }, { multiple: true, class: "select2", name: "notions[]" } %>
+    </div>
+
+    <!-- Pays -->
+    <div class="filter">
+      <label for="list_country"><%= t('search.country') %></label>
+      <%= form.select :country, @countries.all.map { |c| [c.country, c.id] }, { include_blank: t('search.choose_country') }, { multiple: true, class: "select2" } %>
+    </div>
+
+    <!-- Dates -->
+     <div class="filter" data-controller="dropdown" data-tabs-search-target="dateFilter">
+      <label for="dateFilter"><%= t('search.dates') %></label>
+      <div class="dropdown">
+        <button type="button" class="dropdown-toggle" data-dropdown-target="toggle">
+          <%= t('search.select_period') %>
+        </button>
+        <div class="dropdown-menu" data-dropdown-target="menu">
+          <div>
+            <label for="startDate"><%= t('search.from') %></label>
+            <%= form.number_field :start_year,
+                value: params[:start_year],
+                class: "date-filter",
+                id: "startDate",
+                placeholder: t('search.start_year') %>
+          </div>
+          <div>
+            <label for="endDate"><%= t('search.to') %></label>
+            <%= form.number_field :end_year,
+                value: params[:end_year],
+                class: "date-filter",
+                id: "endDate",
+                placeholder: t('search.end_year') %>
+          </div>
+
+          <!-- Le bouton qui applique le filtre -->
+          <button type="button" id="applyDateFilter" class="button dark">
+            <%= t('search.apply') %>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <h2 style="margin-top:32px" class="title"><%= t('lists.create.designers_title') %></h2>
+ 
   <div class="search-container">
     <svg class="search-icon" width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M5.38281 0.530273C6.58078 0.291983 7.82269 0.414466 8.95117 0.881836C10.0797 1.34928 11.045 2.14062 11.7236 3.15625C12.4023 4.17191 12.7637 5.36637 12.7637 6.58789V6.58887C12.7653 7.95942 12.3062 9.29104 11.46 10.3691L11.2344 10.6562L11.4932 10.915L14.293 13.7061L14.2939 13.707C14.3325 13.7452 14.3629 13.7908 14.3838 13.8408C14.4046 13.8909 14.416 13.9448 14.416 13.999C14.416 14.0534 14.4047 14.108 14.3838 14.1582C14.3733 14.1832 14.3608 14.2071 14.3457 14.2295L14.2939 14.292L14.292 14.2939C14.2539 14.3324 14.2082 14.3629 14.1582 14.3838C14.108 14.4047 14.0534 14.416 13.999 14.416C13.9448 14.416 13.8909 14.4046 13.8408 14.3838C13.8158 14.3734 13.7919 14.3608 13.7695 14.3457L13.707 14.2939L13.7061 14.293L10.915 11.4932L10.6562 11.2344L10.3691 11.46C9.35826 12.2534 8.12445 12.7067 6.84473 12.7588L6.58887 12.7637H6.58789C5.36637 12.7637 4.17191 12.4023 3.15625 11.7236C2.14062 11.045 1.34928 10.0797 0.881836 8.95117C0.414466 7.82269 0.291983 6.58078 0.530273 5.38281C0.768606 4.18482 1.35699 3.08442 2.2207 2.2207C3.08442 1.35699 4.18482 0.768606 5.38281 0.530273ZM7.63184 1.33789C6.5938 1.13149 5.51787 1.23765 4.54004 1.64258C3.56199 2.0477 2.72585 2.73405 2.1377 3.61426C1.54954 4.49449 1.23536 5.52924 1.23535 6.58789L1.24219 6.85352C1.30786 8.17642 1.86172 9.43201 2.80273 10.373C3.74376 11.3141 4.99938 11.8679 6.32227 11.9336L6.58789 11.9404C7.64655 11.9404 8.68128 11.6262 9.56152 11.0381C10.4416 10.45 11.1281 9.61463 11.5332 8.63672C11.9383 7.65873 12.0444 6.58218 11.8379 5.54395C11.6314 4.50562 11.1216 3.55132 10.373 2.80273C9.62447 2.05417 8.67014 1.54442 7.63184 1.33789Z" fill="#202020" stroke="#202020" stroke-width="0.823492"/>
@@ -193,4 +245,97 @@ document.addEventListener("turbo:load", () => {
   setupLiveSearch('designer-search','designers-load-more','designers');
   setupLiveSearch('oeuvre-search','oeuvres-load-more','oeuvres');
 });
+</script>
+
+
+<script>
+  function initSelect2() {
+    $(".select2").each(function () {
+      const $select = $(this);
+
+      // Toujours détruire même si le navigateur restaure la page
+      if ($select.data('select2')) {
+        $select.select2('destroy');
+      }
+
+      $select.select2({
+        placeholder: "Choisir des filtres",
+        allowClear: true,
+        width: "100%"
+      });
+
+      const filterForm = document.getElementById("filterForm");
+      if (filterForm) {
+        $select.off("select2:select select2:unselect");
+        $select.on("select2:select select2:unselect", function () {
+          const formData = new FormData(filterForm);
+          const url = new URL(window.location.href);
+
+          formData.forEach((value, key) => {
+            if (value) {
+              url.searchParams.set(key, value);
+            } else {
+              url.searchParams.delete(key);
+            }
+          });
+
+          window.history.pushState({}, "", url);
+          filterForm.requestSubmit();
+        });
+      }
+    });
+  function initFilters() {
+  $(".select2").each(function () {
+    const $select = $(this);
+
+    // reset au cas où
+    if ($select.data('select2')) {
+      $select.select2('destroy');
+    }
+
+    $select.select2({
+      placeholder: "Choisir",
+      allowClear: true,
+      width: "100%"
+    });
+
+    const filterForm = document.getElementById("filterForm");
+    if (!filterForm) return;
+
+    // On écoute select / unselect
+    $select.on("select2:select select2:unselect", function () {
+      const formData = new FormData(filterForm);
+      const url = new URL(window.location.href);
+
+      // Nettoyer avant de remettre
+      url.search = "";
+
+      formData.forEach((value, key) => {
+        if (value) {
+          // ⚠️ pour gérer multiples valeurs (domaine[], notions[], etc.)
+          url.searchParams.append(key, value);
+        }
+      });
+
+      // met à jour l’URL
+      window.history.pushState({}, "", url);
+
+      // soumet le form => ça recharge la page avec les bons filtres
+      filterForm.requestSubmit();
+    });
+  });
+}
+
+document.addEventListener("turbo:load", initFilters);
+
+// très important : nettoyer avant mise en cache
+document.addEventListener("turbo:before-cache", () => {
+  $(".select2").each(function () {
+    if ($(this).data('select2')) {
+      $(this).select2('destroy');
+    }
+  });
+});
+
+
 </script>
