--- a/app/views/pages/cgu.html.erb
+++ b/app/views/pages/cgu.html.erb
@@ -11,7 +11,7 @@
 </section>
 <section class="grid-1">
  <!-- Script AdSense -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2941773271062587"
+  <%# <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2941773271062587"
           crossorigin="anonymous"></script>
 
   <!-- Bloc pub -->
@@ -46,7 +46,7 @@
     // Pour Turbo/Hotwire
     document.addEventListener('turbo:load', initAds);
     
-  </script>
+  </script> %>
 
   <p class="black medium">Dernière mise à jour : 26/08/2024</p>
   <p style="margin-top:24px">
