--- a/app/views/designers/_designer.html.erb
+++ b/app/views/designers/_designer.html.erb
@@ -255,7 +255,7 @@
             <% end %>
           </div>
         <% end %>
-         <p class="text-description-reference italic">Les éléments dont l’information est incertaine sont affichés en italique pour en signaler la prudence.</p>
+         <%# <p class="text-description-reference italic">Les éléments dont l’information est incertaine sont affichés en italique pour en signaler la prudence.</p> %>
         <h2 class="title-description-reference">Actions</h2>
         <div class="flex-actions">
           <% if designer.validation %>
