--- a/app/views/oeuvres/_oeuvre.html.erb
+++ b/app/views/oeuvres/_oeuvre.html.erb
@@ -259,7 +259,7 @@
           <% end %>
         </div>
       <% end %>
-      <p class="text-description-reference italic"><%= t('oeuvres.source_italic') %></p>
+      <%# <p class="text-description-reference italic"><%= t('oeuvres.source_italic') </p>%>
       <h2 class="title-description-reference"><%= t('oeuvres.actions') %></h2>
       <div class="flex-actions">
         <% if oeuvre.validation %>
