--- a/app/views/pages/profil.html.erb
+++ b/app/views/pages/profil.html.erb
@@ -22,6 +22,17 @@
   </div>
 </section>
 <section class="grid-1">
+
+  <!-- Pub Google -->
+<div class="ad-container" style="min-width:250px; width:100%; text-align:center;">
+  <ins class="adsbygoogle"
+       style="display:block; width:100%; height:auto;"
+       data-ad-client="ca-pub-2941773271062587"
+       data-ad-slot="7247194614"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+</div>
+
     <div class="flex-profils">
     <h2><%= t('profile.general') %></h2>
     <%= link_to edit_user_registration_path, class: "nav-link-profil" do %>
