--- a/app/views/designers/_designer.html.erb
+++ b/app/views/designers/_designer.html.erb
@@ -643,7 +643,7 @@
         <span id="closeImageModal" style="cursor:pointer;font-size:1.5rem;">&times;</span>
       </div>
       <div class="modal-body" style="text-align:center;">
-        <img id="modalImage" src="<%= designer_image_path %>" alt="<%= designer.nom_designer %>" style="max-width:100%; height:auto; border-radius:8px;">
+        <img id="modalImage" src="<%= designer_image_path %>" alt="<%= designer.nom_designer %>" style="max-width:100%; max-height:80dvh; height:auto; border-radius:8px;">
       </div>
     </div>
   </div>
