--- a/app/views/designers/index.html.erb
+++ b/app/views/designers/index.html.erb
@@ -53,7 +53,7 @@
     </div>
   <% end %>
 
-  <button data-controller="lang-switcher" class="lang-switcher" data-action="click->lang-switcher#toggle">
+  <%# <button data-controller="lang-switcher" class="lang-switcher" data-action="click->lang-switcher#toggle">
     <span class="lang-icon">
     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M8.82263 6.50977C8.82263 10.8194 6.63857 12.9761 3.94531 12.9761M3.94531 6.50977H10.7736" stroke="white" stroke-width="1.95093" stroke-linecap="round" stroke-linejoin="round"/>
@@ -61,21 +61,21 @@
             </svg>
           </span>
       </span>
-      <span class="lang-label" data-lang-switcher-target="current"><%= I18n.locale.to_s.upcase %></span>
+      <span class="lang-label" data-lang-switcher-target="current"><%= I18n.locale.to_s.upcase </span>
       <span class="lang-arrow">
     <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M4.83984 6.80664L9.22632 11.1931L13.6128 6.80664" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
       </span>
       <div class="lang-dropdown" data-lang-switcher-target="dropdown">
-          <%= link_to url_for(locale: :fr), class: "lang-option", data: { action: "click->lang-switcher#select", lang_switcher_target: "option", lang: "FR" } do %>
+          <%= link_to url_for(locale: :fr), class: "lang-option", data: { action: "click->lang-switcher#select", lang_switcher_target: "option", lang: "FR" } do 
             <span class="flag">🇫🇷</span> FR
-          <% end %>
-          <%= link_to url_for(locale: :en), class: "lang-option", data: { action: "click->lang-switcher#select", lang_switcher_target: "option", lang: "EN" } do %>
+          <% end 
+          <%= link_to url_for(locale: :en), class: "lang-option", data: { action: "click->lang-switcher#select", lang_switcher_target: "option", lang: "EN" } do 
             <span class="flag">🇬🇧</span> EN
-          <% end %>
+          <% end 
       </div>
-  </button>
+  </button> %>
 </div>
 
 
