--- a/app/views/pages/presentation.html.erb
+++ b/app/views/pages/presentation.html.erb
@@ -1,15 +1,39 @@
 <!-- SECTION HERO -->
+<style>
+  .adsbygoogle {
+  display: block;
+  width: 100%;
+  min-width: 250px;
+}
+
+.ad-container {
+  min-width: 250px;
+}
+
+</style>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2941773271062587"
      crossorigin="anonymous"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-6r+di+5g-2m-8y"
-     data-ad-client="ca-pub-2941773271062587"
-     data-ad-slot="7247194614"></ins>
+     
+<div class="ad-container">
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-format="fluid"
+       data-ad-layout-key="-6r+di+5g-2m-8y"
+       data-ad-client="ca-pub-2941773271062587"
+       data-ad-slot="7247194614"></ins>
+</div>
 <script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
+  document.addEventListener("turbo:load", function() {
+    try {
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    } catch (e) {
+      console.error(e);
+    }
+  });
 </script>
+
+
+
 <section class="od-hero">
   <div class="od-hero-container">
     
